# aegis

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/aegis-ai/: Cargo.toml
crates/aegis-ai/src/: lib.rs
crates/aegis-apt/: Cargo.toml
crates/aegis-apt/src/: lib.rs
crates/aegis-audit/: Cargo.toml
crates/aegis-audit/src/: lib.rs
crates/aegis-brew/src/: lib.rs
crates/aegis-cargo/: Cargo.toml
crates/aegis-cargo/src/: lib.rs
crates/aegis-cli/: Cargo.toml
crates/aegis-cli/src/: main.rs
crates/aegis-container/: Cargo.toml
crates/aegis-container/src/: lib.rs
crates/aegis-core/: Cargo.toml
crates/aegis-core/src/: lib.rs
crates/aegis-executor/: Cargo.toml
crates/aegis-executor/src/: lib.rs
crates/aegis-go/: Cargo.toml
crates/aegis-go/src/: lib.rs
crates/aegis-npm/: Cargo.toml
crates/aegis-npm/src/: lib.rs
crates/aegis-nuget/: Cargo.toml
crates/aegis-nuget/src/: lib.rs
crates/aegis-pip/: Cargo.toml
crates/aegis-pip/src/: lib.rs
crates/aegis-policy/: Cargo.toml
crates/aegis-policy/src/: lib.rs
crates/aegis-signing/: Cargo.toml
crates/aegis-signing/src/: lib.rs
crates/aegis-vscode/: Cargo.toml
crates/aegis-vscode/src/: lib.rs
packaging/: install-native.sh  verify-native.sh
packaging/systemd/: aegis-monitor.service  aegis-monitor.timer  aegis-reviewd.service  aegisd.service
packaging/wrappers/: aegis-package-wrapper
policies/: default-policy.toml
schemas/: ai-review.schema.json  audit-event.schema.json  execution-plan.schema.json  operation-plan.schema.json  policy-result.schema.json
skills/aegis-production-ops/: SKILL.md
skills/aegis-production-ops/scripts/: aegis_status_snapshot.py
tests/fixtures/apt/: kernel_upgrade.txt  upgrade_simple.txt  upgrade_with_removal.txt
tests/fixtures/cargo/: build_rs_crate.json  clean_crate.txt  native_link_crate.json  proc_macro_crate.json
tests/fixtures/container/: image_digest.json  image_latest.json  image_no_signature.json
tests/fixtures/go/: env_checksum_enabled.txt  env_gosumdb_off.txt  module_pinned.json  module_unpinned.json
tests/fixtures/npm/: package_clean.json  package_with_postinstall.json
tests/fixtures/nuget/: aspnet_identity_package.json  build_targets_package.json  clean_package.json  powershell_package.json
tests/fixtures/pip/: clean_package.json  native_extension_package.json  setup_py_package.json
tests/fixtures/vscode/: broad_activation_package.json  bundled_binary_package.json  clean_extension_package.json  workspace_contains_package.json
