[package]
name = "aegis-audit"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
aegis-core = { path = "../aegis-core" }
anyhow.workspace = true
chrono.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
