[package]
name = "aegis-executor"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
aegis-core = { path = "../aegis-core" }
aegis-signing = { path = "../aegis-signing" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
sha2.workspace = true
