[package]
name = "aegis-signing"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
aegis-core = { path = "../aegis-core" }
anyhow.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
